# i54m_apiuser

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  boot_django.py  make_migrations.py  pyproject.toml  requirements.txt  run_tests.py  setup.cfg
i54m_apiuser/: admin.py  apps.py  models.py  tests.py
i54m_apiuser/migrations/: 0001_inital.py  0002_auto_20240319_1258.py
