[metadata]
name = django-i54m-apiuser
version = 0.2.2
description = A Django app to add api keys to django users.
long_description = file: README.rst
url = https://www.i54m.com
author = i54m
author_email = dev@i54m.com
license = BSD-3-Clause  # Example license TODO find a license if release into puclic domain
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2  
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.2
    django-ipware >= 6.0.4